Fixes overlapping image in Reorder
When the connection isn't optimal, the delay of loading images can cause overlaps, this enhanced implementation should work independent of the delay

--- a/meteor/styles/demo8.scss
+++ b/meteor/styles/demo8.scss
@@ -1,58 +1,65 @@
 @import "bootstrap/bootstrap/mixins/_buttons";
 @import "config";
 
-
 $empty-color: #bfbfbf;
 $both-played-color: #1f1028;
 
 * {
-	padding: 0;
-	margin: 0;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	user-select: none;
+  padding: 0;
+  margin: 0;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
 }
 
 .demo8-outer {
-	background-color: #EEE;
-	color: #FFF;
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	font: 28px/1em "Helvetica";
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	display: -webkit-flex;
-	-webkit-justify-content: center;
-	-webkit-align-items: center;
+  background-color: #EEE;
+  color: #FFF;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  font: 28px/1em "Helvetica";
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  display: -webkit-flex;
+  -webkit-justify-content: center;
+  -webkit-align-items: center;
 }
+
 .demo8 {
-    /*width: 420px;*/
-    /*height: auto;*/
-    display: table;
-    min-height: 15em;
-    clear: both;
-    overflow: auto;
-    width: 100%;
+  /*width: 420px;*/
+  /*height: auto;*/
+  display: table;
+  min-height: 15em;
+  clear: both;
+  overflow: auto;
+  width: 100%;
+  align-items: center;
+  
 }
-.demo8-item {
-    flex: 1;
-	position: absolute;
-	overflow: visible;
-	pointer-events: auto;
-	transform-origin: 10% 50% 0px;
-	border-radius: 4px;
-	color: rgb(153, 153, 153);
-    padding: 5px;
-    margin: 5px;
-	line-height: 30px;
-	font-size: 14px;
-	font-weight: 400;
-	background-color: rgb(255, 255, 255);
-	box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-  width: 94%;
+
+
+
+
+.demo8-item-common {
+  flex: 1;
+  overflow: visible;
+  visibility: hidden;
+  pointer-events: auto;
+  transform-origin: 10% 50% 0px;
+  border-radius: 4px;
+  border-color: rgb(153, 153, 153);
+  padding: 5px;
+  margin: 5px;
+  line-height: 30px;
+  font-size: 14px;
+  font-weight: 400;
+  background-color: rgb(255, 255, 255);
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  width: 85%;
+  box-shadow: rgba(0, 0, 0, 0.2);
 
   .post-media {
     text-align: center;
@@ -64,47 +71,38 @@ $both-played-color: #1f1028;
   }
 }
 
+.demo8-item {
+  @extend .demo8-item-common;
+  position: absolute;
+  visibility: visible;
 
+}
 .demo8-item-static {
-    flex: 1;
-    width: 100%;
-    overflow: visible;
-    pointer-events: auto;
-    transform-origin: 10% 50% 0px;
-    border-radius: 4px;
-    color: rgb(153, 153, 153);
-    padding: 5px;
-    margin: 5px;
-    line-height: 30px;
-    font-size: 14px;
-    font-weight: 400;
-    background-color: rgb(255, 255, 255);
-    box-sizing: border-box;
-    -webkit-box-sizing: border-box;
+  @extend .demo8-item-common;
+  visibility: visible;
 }
 
 .link {
-	position: absolute;
-	color: rgb(76, 76, 76);
-	text-decoration: none;
-	font: 14px/1em "Helvetica";
-	padding: 10px;
-	top: 0;
-	left: 0;
+  position: absolute;
+  color: rgb(76, 76, 76);
+  text-decoration: none;
+  font: 14px/1em "Helvetica";
+  padding: 10px;
+  top: 0;
+  left: 0;
 }
 
 .reorderImage {
-    max-height: 100px;
+  max-height: 100px;
   width: auto;
-    //max-width: 50px;
+  //max-width: 50px;
 }
 
 .question-navigation {
-    text-align: center;
+  text-align: center;
   display: flex;
 
- 
-  }
+}
 
 .question-navigation-button {
   flex-basis: 0;
@@ -129,6 +127,7 @@ $both-played-color: #1f1028;
   width: 4%;
 
 }
+
 .timeline-date-right {
   text-align: left;
   display: table-cell;
@@ -151,7 +150,6 @@ $correct-color: rgb(218, 255, 157);
 $wrong-color: rgb(255, 138, 132);
 $grey-border: #b8b8b8;
 
-
 @mixin order-item($color) {
   border-right: 10px solid $color;
   flex: 1;
@@ -171,7 +169,8 @@ $grey-border: #b8b8b8;
   -webkit-box-sizing: border-box;
   box-shadow: rgba(0, 0, 0, 0.2) 0px 1px 2px 0px;
 }
-.correct-order  {
+
+.correct-order {
   @include order-item($correct-color);
 
 }
